--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </div>
       </section>
 
-      <section class="bottom-section bg-color5 container-fluid row m-0 my-3 px-0 w-100">
+      <section class="bottom-section bg-color5 container-fluid row m-0 my-1 px-0 w-100">
         <div class="sign-in col-12 w-100 my-5 d-flex flex-column justify-content-center align-items-center">
           <h3 class="text-center">SIGN UP FOR OUR EMAIL</h3>
           <p class="text-center py-4">GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN
@@ -293,21 +293,8 @@
             </button>
           </div>
         </div>
-        <div class="bg-color4 container-fluid m-0 px-0 w-100 py-2 col-12">
-          <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
-            <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
-                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
-            <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Roland.jpg" alt="roland"></li>
-            <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
-                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Fender.jpg" alt="fender"></li>
-            <li class="d-none d-md-block col-md-3 d-lg-block col-lg-2"><a href="#"></a><img
-                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Gibson.jpg" alt="gibson"></li>
-            <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Ibanez.jpg" alt="ibanez"></li>
-            <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
-          </ul>
+        <div class="bg-color4 container-fluid m-0 px-0 w-100 py-0 col-12">
+          <img class="brands" src="./images/brands.png" alt="brands">
         </div>
       </section>
     </main>
